remove unused code and fix rooms controller